# Vintage-Vibe

./: .gitignore  CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  README.md  Vintage-Vibe.jucer  Vitange-Vibe.scd  prototype.scd
JuceLibraryCode/: BinaryData.h  JuceHeader.h  JucePluginDefines.h
Source/: BrownianMotion.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
